# wordle

./: SECURITY.MD  pyproject.toml  test_wordle.py  wordle.py  wordlist.py
wordle/: __init__.py  __main__.py  wordlist.py
