[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wordle"
version = "0.1.0"
description = ""
authors = [
    "James Hodgkinson <james@terminaloutcomes.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pylint = "^2.12.2"
pytest = "^6.2.5"

[tool.poetry.scripts]
wordle = "wordle.__main__:cli"

[project]
name = "wordle"
license = "MIT"
version = "0.1.0"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
